...
                android:text="@string/tab_coupons"
                android:textColor="@color/text_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_LAY_tabProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
...
